[2022-44][FIX] Fixed the normalization function as it did not work with certain hospitals

--- a/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization.ipynb
@@ -81,8 +81,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-09 14:55:58.888 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 17 cases for Hirslanden Aarau 2018\n",
-      "2022-11-09 14:55:58.891 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:59 - TYPES:\n",
+      "2022-11-10 13:51:02.240 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 17 cases for Hirslanden Aarau 2018\n",
+      "2022-11-10 13:51:02.245 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:60 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "case_id                   object\n",
@@ -113,13 +113,13 @@
       "kassenbeanstandung        string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-09 14:55:58.897 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-09 14:55:58.900 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-09 14:55:58.902 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-09 14:55:58.905 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-09 14:55:58.906 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-09 14:55:58.910 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
-      "2022-11-09 14:55:58.913 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
+      "2022-11-10 13:51:02.250 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-10 13:51:02.253 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-10 13:51:02.256 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-10 13:51:02.258 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-10 13:51:02.259 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-10 13:51:02.263 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
+      "2022-11-10 13:51:02.265 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
      ]
     },
     {
@@ -522,161 +522,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-09 14:55:59.857 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 10112 rows from the DB, for the hospital 'Hirslanden Aarau' in 2018\n"
+      "2022-11-10 13:51:05.417 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 10112 rows from the DB, for the hospital 'Hirslanden Aarau' in 2018\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>aimedic_id</th>\n",
-       "      <th>case_id</th>\n",
-       "      <th>primary_diagnosis</th>\n",
-       "      <th>secondary_diagnoses</th>\n",
-       "      <th>primary_procedure</th>\n",
-       "      <th>secondary_procedures</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>age_years</th>\n",
-       "      <th>age_days</th>\n",
-       "      <th>gestation_age</th>\n",
-       "      <th>duration_of_stay</th>\n",
-       "      <th>ventilation_hours</th>\n",
-       "      <th>grouper_admission_type</th>\n",
-       "      <th>admission_date</th>\n",
-       "      <th>admission_weight</th>\n",
-       "      <th>grouper_discharge_type</th>\n",
-       "      <th>discharge_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>431229</td>\n",
-       "      <td>0041855716</td>\n",
-       "      <td>I7022</td>\n",
-       "      <td>[T828, Y828, I708, I1090, Z9588, ...]</td>\n",
-       "      <td>395014:L:20180918</td>\n",
-       "      <td>[004C12::20180918, 395011:L:20180918, 0041::20180918, 004B18:L:20180918, 004B45:L:20180918, ...]</td>\n",
-       "      <td>W</td>\n",
-       "      <td>78</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>01</td>\n",
-       "      <td>2018-09-18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>00</td>\n",
-       "      <td>2018-09-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>431363</td>\n",
-       "      <td>0041719219</td>\n",
-       "      <td>I495</td>\n",
-       "      <td>[I484, I480, I1090, I2519, I340, ...]</td>\n",
-       "      <td>893909::20180317</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>M</td>\n",
-       "      <td>91</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>01</td>\n",
-       "      <td>2018-03-17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>00</td>\n",
-       "      <td>2018-03-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>431860</td>\n",
-       "      <td>0041648887</td>\n",
-       "      <td>I5014</td>\n",
-       "      <td>[I5001, I2513, I2522, N184, I1320, ...]</td>\n",
-       "      <td>99B712::20180117</td>\n",
-       "      <td>[8945::20180117, 860A06:L:20180122, 948X40::20180122]</td>\n",
-       "      <td>M</td>\n",
-       "      <td>64</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>01</td>\n",
-       "      <td>2018-01-17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>00</td>\n",
-       "      <td>2018-01-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>432553</td>\n",
-       "      <td>0041817227</td>\n",
-       "      <td>I350</td>\n",
-       "      <td>[I2512, I1090, E788, F171, I7101, ...]</td>\n",
-       "      <td>35F121::20180924</td>\n",
-       "      <td>[361122::20180924, 361C11::20180924, 396111::20180924, 3963::20180924, 3964::20180924, ...]</td>\n",
-       "      <td>M</td>\n",
-       "      <td>76</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>8</td>\n",
-       "      <td>01</td>\n",
-       "      <td>2018-09-23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>00</td>\n",
-       "      <td>2018-10-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>432647</td>\n",
-       "      <td>0041665678</td>\n",
-       "      <td>I5001</td>\n",
-       "      <td>[J91, I5013, I7020, L304, N185, ...]</td>\n",
-       "      <td>887211::20180130</td>\n",
-       "      <td>[887963:B:20180130, 887964:B:20180130, 887975:B:20180130, 3491:R:20180201]</td>\n",
-       "      <td>M</td>\n",
-       "      <td>82</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>01</td>\n",
-       "      <td>2018-01-30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>00</td>\n",
-       "      <td>2018-02-16</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   aimedic_id     case_id primary_diagnosis                      secondary_diagnoses  primary_procedure                                                                              secondary_procedures gender  age_years  age_days  gestation_age  duration_of_stay  ventilation_hours grouper_admission_type admission_date  admission_weight grouper_discharge_type discharge_date\n",
-       "0      431229  0041855716             I7022    [T828, Y828, I708, I1090, Z9588, ...]  395014:L:20180918  [004C12::20180918, 395011:L:20180918, 0041::20180918, 004B18:L:20180918, 004B45:L:20180918, ...]      W         78         0              0                 1                  0                     01     2018-09-18                 0                     00     2018-09-19\n",
-       "1      431363  0041719219              I495    [I484, I480, I1090, I2519, I340, ...]   893909::20180317                                                                                                []      M         91         0              0                 4                  0                     01     2018-03-17                 0                     00     2018-03-21\n",
-       "2      431860  0041648887             I5014  [I5001, I2513, I2522, N184, I1320, ...]   99B712::20180117                                             [8945::20180117, 860A06:L:20180122, 948X40::20180122]      M         64         0              0                 8                  8                     01     2018-01-17                 0                     00     2018-01-25\n",
-       "3      432553  0041817227              I350   [I2512, I1090, E788, F171, I7101, ...]   35F121::20180924       [361122::20180924, 361C11::20180924, 396111::20180924, 3963::20180924, 3964::20180924, ...]      M         76         0              0                 9                  8                     01     2018-09-23                 0                     00     2018-10-02\n",
-       "4      432647  0041665678             I5001     [J91, I5013, I7020, L304, N185, ...]   887211::20180130                        [887963:B:20180130, 887964:B:20180130, 887975:B:20180130, 3491:R:20180201]      M         82         0              0                17                  0                     01     2018-01-30                 0                     00     2018-02-16"
+       "aimedic_id                 int64\n",
+       "case_id                   object\n",
+       "primary_diagnosis         object\n",
+       "secondary_diagnoses       object\n",
+       "primary_procedure         object\n",
+       "secondary_procedures      object\n",
+       "gender                    object\n",
+       "age_years                  int64\n",
+       "age_days                   int64\n",
+       "gestation_age              int64\n",
+       "duration_of_stay           int64\n",
+       "ventilation_hours          int64\n",
+       "grouper_admission_type    object\n",
+       "admission_date            object\n",
+       "admission_weight           int64\n",
+       "grouper_discharge_type    object\n",
+       "discharge_date            object\n",
+       "dtype: object"
       ]
      },
      "execution_count": 4,
@@ -692,7 +561,7 @@
     "cols_to_join.remove(PATIENT_ID_COL)\n",
     "\n",
     "revised_cases, unmatched = revise(file_info, revised_cases_df, validation_cols=cols_to_join)\n",
-    "revised_cases.head()"
+    "revised_cases.dtypes"
    ]
   },
   {
@@ -721,8 +590,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-09 14:56:00.270 | INFO     | src.revised_case_normalization.notebook_functions.group:group:78 - Grouping 17 cases ...\n",
-      "2022-11-09 14:56:01.310 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:83 - Grouped 17 cases into: 17 revisions, 168 diagnoses rows, 108 procedure rows\n"
+      "2022-11-10 13:51:06.280 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 17 cases ...\n",
+      "2022-11-10 13:51:07.308 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 17 cases into: 17 revisions, 168 diagnoses rows, 108 procedure rows\n"
      ]
     }
    ],
@@ -974,13 +843,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-09 14:56:01.329 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 17 cases into the 'Revisions' table ...\n",
-      "2022-11-09 14:56:01.925 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 17 rows from the \"Revisions\" table, which is about to be updated\n",
-      "2022-11-09 14:56:02.007 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 17 cases into the 'Revisions' table\n",
-      "2022-11-09 14:56:02.009 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 168 rows into the 'Diagnoses' table ...\n",
-      "2022-11-09 14:56:03.827 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 168 rows into the 'Diagnoses' table\n",
-      "2022-11-09 14:56:03.832 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 108 rows into the 'Procedures' table ...\n",
-      "2022-11-09 14:56:04.800 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 108 rows into the 'Procedures' table\n"
+      "2022-11-10 13:51:07.327 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 17 cases into the 'Revisions' table ...\n",
+      "2022-11-10 13:51:08.984 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 17 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-10 13:51:09.060 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 17 cases into the 'Revisions' table\n",
+      "2022-11-10 13:51:09.061 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 168 rows into the 'Diagnoses' table ...\n",
+      "2022-11-10 13:51:10.569 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 168 rows into the 'Diagnoses' table\n",
+      "2022-11-10 13:51:10.572 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 108 rows into the 'Procedures' table ...\n",
+      "2022-11-10 13:51:11.704 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 108 rows into the 'Procedures' table\n"
      ]
     }
    ],
