--- a/src/revised_case_normalization/Hirslanden_Beau_Site_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Beau_Site_2017_normalization.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Revised case normalization for Hirslanden Beausite 2017\n",
+    "# Revised case normalization for Hirslanden Beau-Site 2017\n",
     "\n",
     "Notes:\n",
     "\n",
