--- a/src/revised_case_normalization/USZ_2019_normalization.ipynb
+++ b/src/revised_case_normalization/USZ_2019_normalization.ipynb
@@ -84,8 +84,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 10:01:43.611 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 150 cases for USZ 2019\n",
-      "2022-11-10 10:01:43.616 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:59 - TYPES:\n",
+      "2022-11-10 10:14:45.783 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 150 cases for USZ 2019\n",
+      "2022-11-10 10:14:45.787 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:59 - TYPES:\n",
       "datum/ lieferung     string\n",
       "case_id              object\n",
       "patient_id           object\n",
@@ -111,12 +111,12 @@
       "kommentar            string\n",
       "case_id_norm         object\n",
       "dtype: object\n",
-      "2022-11-10 10:01:43.627 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-10 10:01:43.634 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-10 10:01:43.678 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-10 10:01:43.687 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-10 10:01:43.687 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-10 10:01:43.702 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 18 rows were affected:\n",
+      "2022-11-10 10:14:45.800 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-10 10:14:45.808 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-10 10:14:45.851 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-10 10:14:45.859 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-10 10:14:45.860 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-10 10:14:45.875 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 18 rows were affected:\n",
       "row 2: primary diagnosis R11 => M8088\n",
       "row 22: primary diagnosis M340 => I730\n",
       "row 60: primary diagnosis A418 => A419\n",
@@ -135,8 +135,8 @@
       "row 143: primary diagnosis F4540 => C341\n",
       "row 145: primary diagnosis I1001 => R522\n",
       "row 146: primary diagnosis C61 => A410\n",
-      "2022-11-10 10:01:43.705 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:104 - Removed 2 rows containing duplicates\n",
-      "2022-11-10 10:01:43.706 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
+      "2022-11-10 10:14:45.878 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:104 - Removed 2 rows containing duplicates\n",
+      "2022-11-10 10:14:45.878 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
      ]
     },
     {
@@ -428,8 +428,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 10:01:49.010 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 14430 rows from the DB, for the hospital 'USZ' in 2019\n",
-      "2022-11-10 10:01:49.023 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 76 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
+      "2022-11-10 10:14:47.969 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 14430 rows from the DB, for the hospital 'USZ' in 2019\n",
+      "2022-11-10 10:14:47.983 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 76 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
      ]
     },
     {
@@ -628,8 +628,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 10:01:49.480 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 72 cases ...\n",
-      "2022-11-10 10:01:50.627 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 72 cases into: 72 revisions, 826 diagnoses rows, 477 procedure rows\n"
+      "2022-11-10 10:14:48.383 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 72 cases ...\n",
+      "2022-11-10 10:14:50.235 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 72 cases into: 72 revisions, 826 diagnoses rows, 477 procedure rows\n"
      ]
     }
    ],
@@ -824,12 +824,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 10:01:50.648 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 72 cases into the 'Revisions' table ...\n",
-      "2022-11-10 10:01:51.844 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 72 cases into the 'Revisions' table\n",
-      "2022-11-10 10:01:51.846 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 826 rows into the 'Diagnoses' table ...\n",
-      "2022-11-10 10:01:54.124 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 826 rows into the 'Diagnoses' table\n",
-      "2022-11-10 10:01:54.127 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 477 rows into the 'Procedures' table ...\n",
-      "2022-11-10 10:01:55.278 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 477 rows into the 'Procedures' table\n"
+      "2022-11-10 10:14:50.257 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 72 cases into the 'Revisions' table ...\n",
+      "2022-11-10 10:14:50.885 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 72 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-10 10:14:51.001 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 72 cases into the 'Revisions' table\n",
+      "2022-11-10 10:14:51.004 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 826 rows into the 'Diagnoses' table ...\n",
+      "2022-11-10 10:14:53.011 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 826 rows into the 'Diagnoses' table\n",
+      "2022-11-10 10:14:53.013 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 477 rows into the 'Procedures' table ...\n",
+      "2022-11-10 10:14:53.827 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 477 rows into the 'Procedures' table\n"
      ]
     }
    ],
