[2022-44] Added new notebooks

--- a/src/revised_case_normalization/Hirslanden_Birshof_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Birshof_2017_normalization.ipynb
@@ -81,8 +81,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-09 13:29:59.982 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 4 cases for Hirslanden Birshof 2017\n",
-      "2022-11-09 13:29:59.986 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:59 - TYPES:\n",
+      "2022-11-10 12:02:04.760 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 4 cases for Hirslanden Birshof 2017\n",
+      "2022-11-10 12:02:04.763 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:59 - TYPES:\n",
       "datum                                                string\n",
       "tranche                                              string\n",
       "case_id                                              object\n",
@@ -113,13 +113,13 @@
       "ablehnung kasse                                      string\n",
       "case_id_norm                                         object\n",
       "dtype: object\n",
-      "2022-11-09 13:29:59.991 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-09 13:29:59.993 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-09 13:29:59.995 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-09 13:29:59.997 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-09 13:29:59.997 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-09 13:30:00.000 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
-      "2022-11-09 13:30:00.003 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
+      "2022-11-10 12:02:04.768 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-10 12:02:04.770 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-10 12:02:04.772 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-10 12:02:04.773 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-10 12:02:04.774 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-10 12:02:04.777 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
+      "2022-11-10 12:02:04.779 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
      ]
     },
     {
@@ -275,7 +275,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-09 13:30:01.097 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 3653 rows from the DB, for the hospital 'Hirslanden Birshof' in 2017\n"
+      "2022-11-10 12:02:05.933 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 3653 rows from the DB, for the hospital 'Hirslanden Birshof' in 2017\n"
      ]
     },
     {
@@ -453,8 +453,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-09 13:30:01.537 | INFO     | src.revised_case_normalization.notebook_functions.group:group:78 - Grouping 4 cases ...\n",
-      "2022-11-09 13:30:02.510 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:83 - Grouped 4 cases into: 4 revisions, 39 diagnoses rows, 42 procedure rows\n"
+      "2022-11-10 12:02:06.474 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 4 cases ...\n",
+      "2022-11-10 12:02:07.905 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 4 cases into: 4 revisions, 39 diagnoses rows, 42 procedure rows\n"
      ]
     }
    ],
@@ -576,12 +576,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-09 13:30:02.526 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:250 - Trying to insert 4 cases into the 'Revisions' table ...\n",
-      "2022-11-09 13:30:03.894 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:287 - Inserted 4 cases into the 'Revisions' table\n",
-      "2022-11-09 13:30:03.898 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:299 - Trying to insert 39 rows into the 'Diagnoses' table ...\n",
-      "2022-11-09 13:30:05.839 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:337 - Inserted 39 rows into the 'Diagnoses' table\n",
-      "2022-11-09 13:30:05.843 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:348 - Trying to insert 42 rows into the 'Procedures' table ...\n",
-      "2022-11-09 13:30:06.872 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:394 - Inserted 42 rows into the 'Procedures' table\n"
+      "2022-11-10 12:02:07.930 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 4 cases into the 'Revisions' table ...\n",
+      "2022-11-10 12:02:08.736 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 4 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-10 12:02:08.834 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 4 cases into the 'Revisions' table\n",
+      "2022-11-10 12:02:08.836 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 39 rows into the 'Diagnoses' table ...\n",
+      "2022-11-10 12:02:10.332 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 39 rows into the 'Diagnoses' table\n",
+      "2022-11-10 12:02:10.334 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 42 rows into the 'Procedures' table ...\n",
+      "2022-11-10 12:02:11.273 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 42 rows into the 'Procedures' table\n"
      ]
     }
    ],
